--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,4 +1,6 @@
 security:
+    access_denied_url: /home
+
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
